Added Heitech and Daycom protocol

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -396,6 +396,23 @@ if(${MODULESPACK} MATCHES "OFF" OR WIN32)
 		target_link_libraries(${PROJECT_NAME}-daemon ${Backtrace_LIBRARIES})
 	endif()
 	target_link_libraries(${PROJECT_NAME}-daemon ${CMAKE_THREAD_LIBS_INIT})
+	
+	# if(WIN32)
+		# add_executable(${PROJECT_NAME}-unittest unittest.c ${PROJECT_SOURCE_DIR}/res/win32/icon.obj)
+		# target_link_libraries(${PROJECT_NAME}-unittest "-Wl,--subsystem,windows")
+	# else()
+		# add_executable(${PROJECT_NAME}-unittest unittest.c)
+	# endif()
+	# target_link_libraries(${PROJECT_NAME}-unittest ${PROJECT_NAME}_shared)
+	# if(${ZWAVE} MATCHES "ON")
+		# target_link_libraries(${PROJECT_NAME}-unittest stdc++)
+	# endif()
+	# target_link_libraries(${PROJECT_NAME}-unittest ${CMAKE_DL_LIBS})
+	# target_link_libraries(${PROJECT_NAME}-unittest m)
+	# if(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
+		# target_link_libraries(${PROJECT_NAME}-unittest ${Backtrace_LIBRARIES})
+	# endif()
+	# target_link_libraries(${PROJECT_NAME}-unittest ${CMAKE_THREAD_LIBS_INIT})	
 
 	if(WIN32)
 		add_executable(${PROJECT_NAME}-raw raw.c ${PROJECT_SOURCE_DIR}/res/win32/icon.obj)
