--- a/inc/defines.h.in
+++ b/inc/defines.h.in
@@ -41,9 +41,13 @@
 	#define MAX_CACHE_FILESIZE 		1048576
 	#define WEBSERVER_WORKERS			1
 	#define WEBSERVER_CHUNK_SIZE 	4096
-	#define WEBSERVER_USER 				"www-data"
+	#ifdef __FreeBSD__
+		#define WEBSERVER_USER 				"www-data"
+	#else
+		#define WEBSERVER_USER 				"www"
+	#endif
 	#define WEBGUI_WEBSOCKETS			1
-	#cmakedefine WEBSERVER_SSL			
+	#cmakedefine WEBSERVER_HTTPS			
 #endif
 
 #define MAX_CLIENTS							30
