--- a/inc/defines.h.in
+++ b/inc/defines.h.in
@@ -26,6 +26,7 @@
 #define PULSE_DIV								34
 #define MAXPULSESTREAMLENGTH		512
 #define EPSILON									0.00001
+#define SHA256_ITERATIONS				1000
 
 #ifdef WEBSERVER
 	#define WEBSERVER_PORT				5001
