Some small changes
- Renamed webserver-port to webserver-http-port.
- Renamed webserver-ssl-port to webserver-https-port.
- Show pilight help message in MessageBox on Windows.
- Show pilight version in MessageBox on Windows.

--- a/inc/defines.h.in
+++ b/inc/defines.h.in
@@ -29,7 +29,8 @@
 #define SHA256_ITERATIONS				1000
 
 #ifdef WEBSERVER
-	#define WEBSERVER_PORT				5001
+	#define WEBSERVER_HTTP_PORT				5001
+	#define WEBSERVER_HTTPS_PORT			5002
 	#ifdef _WIN32
 		#define WEBSERVER_ROOT				"c:/pilight/web/"
 	#else
