--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -511,20 +511,20 @@ if(${MODULESPACK} MATCHES "OFF" OR WIN32)
 	target_link_libraries(${PROJECT_NAME}-uuid ${CMAKE_THREAD_LIBS_INIT})
 
 	if(WIN32)
-		add_executable(${PROJECT_NAME}-encrypt encrypt.c ${PROJECT_SOURCE_DIR}/res/win32/icon.obj)
+		add_executable(${PROJECT_NAME}-sha256 sha256.c ${PROJECT_SOURCE_DIR}/res/win32/icon.obj)
 	else()
-		add_executable(${PROJECT_NAME}-encrypt encrypt.c)
+		add_executable(${PROJECT_NAME}-sha256 sha256.c)
 	endif()
-	target_link_libraries(${PROJECT_NAME}-encrypt ${PROJECT_NAME}_shared)
+	target_link_libraries(${PROJECT_NAME}-sha256 ${PROJECT_NAME}_shared)
 	if(${ZWAVE} MATCHES "ON")
-		target_link_libraries(${PROJECT_NAME}-encrypt stdc++)
+		target_link_libraries(${PROJECT_NAME}-sha256 stdc++)
 	endif()
-	target_link_libraries(${PROJECT_NAME}-encrypt ${CMAKE_DL_LIBS})
-	target_link_libraries(${PROJECT_NAME}-encrypt m)
+	target_link_libraries(${PROJECT_NAME}-sha256 ${CMAKE_DL_LIBS})
+	target_link_libraries(${PROJECT_NAME}-sha256 m)
 	if(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
-		target_link_libraries(${PROJECT_NAME}-encrypt ${Backtrace_LIBRARIES})
+		target_link_libraries(${PROJECT_NAME}-sha256 ${Backtrace_LIBRARIES})
 	endif()
-	target_link_libraries(${PROJECT_NAME}-encrypt ${CMAKE_THREAD_LIBS_INIT})	
+	target_link_libraries(${PROJECT_NAME}-sha256 ${CMAKE_THREAD_LIBS_INIT})	
 
 	if(WIN32)
 		add_executable(${PROJECT_NAME}-flash flash.c ${PROJECT_SOURCE_DIR}/res/win32/icon.obj)
@@ -577,7 +577,7 @@ if(${MODULESPACK} MATCHES "OFF" OR WIN32)
 		install(PROGRAMS ${CMAKE_BINARY_DIR}/${PROJECT_NAME}-debug.exe DESTINATION . COMPONENT ${PROJECT_NAME})
 		install(PROGRAMS ${CMAKE_BINARY_DIR}/${PROJECT_NAME}-flash.exe DESTINATION . COMPONENT ${PROJECT_NAME})
 		install(PROGRAMS ${CMAKE_BINARY_DIR}/${PROJECT_NAME}-uuid.exe DESTINATION . COMPONENT ${PROJECT_NAME})
-		install(PROGRAMS ${CMAKE_BINARY_DIR}/${PROJECT_NAME}-encrypt.exe DESTINATION . COMPONENT ${PROJECT_NAME})
+		install(PROGRAMS ${CMAKE_BINARY_DIR}/${PROJECT_NAME}-sha256.exe DESTINATION . COMPONENT ${PROJECT_NAME})
 	else()
 		install(PROGRAMS ${CMAKE_BINARY_DIR}/${PROJECT_NAME}-daemon DESTINATION sbin COMPONENT ${PROJECT_NAME})
 		install(PROGRAMS ${CMAKE_BINARY_DIR}/${PROJECT_NAME}-raw DESTINATION sbin COMPONENT ${PROJECT_NAME})
@@ -587,7 +587,7 @@ if(${MODULESPACK} MATCHES "OFF" OR WIN32)
 		install(PROGRAMS ${CMAKE_BINARY_DIR}/${PROJECT_NAME}-debug DESTINATION sbin COMPONENT ${PROJECT_NAME})
 		install(PROGRAMS ${CMAKE_BINARY_DIR}/${PROJECT_NAME}-flash DESTINATION sbin COMPONENT ${PROJECT_NAME})
 		install(PROGRAMS ${CMAKE_BINARY_DIR}/${PROJECT_NAME}-uuid DESTINATION bin COMPONENT ${PROJECT_NAME})
-		install(PROGRAMS ${CMAKE_BINARY_DIR}/${PROJECT_NAME}-encrypt DESTINATION bin COMPONENT ${PROJECT_NAME})
+		install(PROGRAMS ${CMAKE_BINARY_DIR}/${PROJECT_NAME}-sha256 DESTINATION bin COMPONENT ${PROJECT_NAME})
 		install(CODE "execute_process(COMMAND update-rc.d ${PROJECT_NAME} defaults)")
 		install(CODE "execute_process(COMMAND ldconfig)")
 	endif()
