--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,8 +19,7 @@ set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fomit-frame-pointer")
 # if(CMAKE_BUILD_TYPE MATCHES DEBUG AND NOT ${CMAKE_SYSTEM_PROCESSOR} MATCHES "^mips" AND NOT ${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
 	# #set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fomit-frame-pointer -fsanitize=undefined  -fsanitize=address")
 # else()
-	
-endif()
+# endif()
 if(${ZWAVE} MATCHES "ON")
 	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unknown-warning-option -Wno-psabi -Wunknown-pragmas")
 endif()
