--- a/libs/pilight/hardware/CMakeLists.txt
+++ b/libs/pilight/hardware/CMakeLists.txt
@@ -13,6 +13,12 @@ if(${MODULESPACK} MATCHES "OFF" OR WIN32)
 		list(REMOVE_ITEM ${PROJECT_NAME}_headers "${PROJECT_SOURCE_DIR}/433lirc.h")
 		list(REMOVE_ITEM ${PROJECT_NAME}_sources "${PROJECT_SOURCE_DIR}/IRgpio.c")
 		list(REMOVE_ITEM ${PROJECT_NAME}_headers "${PROJECT_SOURCE_DIR}/IRgpio.h")
+        list(REMOVE_ITEM ${PROJECT_NAME}_headers "${PROJECT_SOURCE_DIR}/raspyrfm.h")
+        list(REMOVE_ITEM ${PROJECT_NAME}_sources "${PROJECT_SOURCE_DIR}/raspyrfm.c")
+        list(REMOVE_ITEM ${PROJECT_NAME}_headers "${PROJECT_SOURCE_DIR}/433raspyrfm.h")
+        list(REMOVE_ITEM ${PROJECT_NAME}_sources "${PROJECT_SOURCE_DIR}/433raspyrfm.c")
+        list(REMOVE_ITEM ${PROJECT_NAME}_headers "${PROJECT_SOURCE_DIR}/868raspyrfm.h")
+        list(REMOVE_ITEM ${PROJECT_NAME}_sources "${PROJECT_SOURCE_DIR}/868raspyrfm.c")
 	endif()
 	
 	if(${ZWAVE} MATCHES "OFF")
