Add ZigBee support
ZigBee devices successfully tested with pilight:
- Philps Hue White Light
- Osram Light Classic B40 TW - LIGHTIFY
- Osram Smart Plug Lightify
- Bitron Home Movement Sensor 902010/22
- Bitron Home Smoke Detektor with siren 902010/24
- Bitron Home Smart Plug with Metering 902010/25
- Bitron Home Thermostat 902010/32
- ubisys Switch S2
- ubisys Shutter Contol J1
- Philips Hue dimmer switch
- Philips Hue motion sensor
- Xiaomi Smart Wireless Switch
- Xiaomi Temperature and Humidity Smart Sensor
- Xiaomi Intelligent Door Window Sensor Control

--- a/libs/pilight/protocols/CMakeLists.txt
+++ b/libs/pilight/protocols/CMakeLists.txt
@@ -11,6 +11,9 @@ endif()
 if(${IR} MATCHES "ON")
 	add_subdirectory(IR)
 endif()
+if(${HARDWARE_ZIGBEE} MATCHES "ON")
+	add_subdirectory(zigbee)
+endif()
 add_subdirectory(core)
 
 file(REMOVE_RECURSE "protocol_header.h")
@@ -50,6 +53,7 @@ if(${MODULESPACK} MATCHES "OFF" OR WIN32)
 			${pilight_protocols_network_files}
 			${pilight_protocols_gpio_files}
 			${pilight_protocols_core_files}
+			${pilight_protocols_zigbee_files}
 			${${PROJECT_NAME}_sources}
 			${${PROJECT_NAME}_headers}
 		CACHE INTERNAL "")
@@ -75,6 +79,7 @@ else()
 			${pilight_protocols_network_files}
 			${pilight_protocols_gpio_files}
 			${pilight_protocols_core_files}
+			${pilight_protocols_zigbee_files}
 		)
 	endif()
 
