New cross-platofrm process analyzing code

--- a/libs/pilight/CMakeLists.txt
+++ b/libs/pilight/CMakeLists.txt
@@ -10,7 +10,10 @@ if(${MODULESPACK} MATCHES "OFF" OR WIN32)
 
 	add_subdirectory(storage)
 	set(${PROJECT_NAME}_files	${${PROJECT_NAME}_files} ${${PROJECT_NAME}_storage_files} CACHE INTERNAL "")
-	
+
+	add_subdirectory(psutil)
+	set(${PROJECT_NAME}_files	${${PROJECT_NAME}_files} ${${PROJECT_NAME}_psutil_files} CACHE INTERNAL "")
+
 	if(${EVENTS} MATCHES "ON")
 		add_subdirectory(events)
 		set(${PROJECT_NAME}_files	${${PROJECT_NAME}_files} ${${PROJECT_NAME}_events_files} CACHE INTERNAL "")
