Travis: don't attempt pushing coverage status in PR builds

--- a/.travis.yml
+++ b/.travis.yml
@@ -40,4 +40,4 @@ after_success:
   - lcov -c -d CMakeFiles/pilight.dir/libs/pilight/events/ -d CMakeFiles/pilight.dir/libs/pilight/core/ -d CMakeFiles/pilight.dir/libs/pilight/psutil/ -d CMakeFiles/pilight.dir/libs/pilight/protocols/API/ -d CMakeFiles/pilight.dir/libs/pilight/protocols/core/ -d CMakeFiles/pilight.dir/libs/pilight/protocols/generic/ -d CMakeFiles/pilight.dir/libs/pilight/protocols/network/ -d CMakeFiles/pilight.dir/libs/pilight/protocols/GPIO -o coverage.info
   - lcov -r coverage.info '*proc.c' '*adhoc.c' '*gc.c' '*generic_webcam.c' '*mem.c' '*CuTest.c' '*firmware.c' '*gpio_switch.c' '*relay.c' '*pushover.c' '*pushbullet.c' '*dht11.c' '*dht22.c' '*arping.c' -o coverage-filtered.info
   - lcov --list coverage-filtered.info
-  - coveralls-lcov --repo-token ${COVERALLS_TOKEN} coverage-filtered.info
+  - if [[ "$TRAVIS_EVENT_TYPE" != "pull_request" ]]; then coveralls-lcov --repo-token ${COVERALLS_TOKEN} coverage-filtered.info; fi
