--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -149,6 +149,10 @@ if(${MODULESPACK} MATCHES "ON" AND NOT WIN32)
 	add_definitions(-DMODULE="1")
 endif()
 
+if(${PILIGHT_UNITTEST})
+	add_definitions(-DPILIGHT_UNITTEST="1")
+endif()
+
 if(NOT WIN32)
 	if(${PROTOCOL_ARPING} MATCHES "ON")
 		set(CMAKE_PCAP_LIBS_INIT)
@@ -173,32 +177,6 @@ if(NOT WIN32)
 			message(FATAL_ERROR "Looking for libpcap - not found")
 		else()
 			message(STATUS "Looking for libpcap - found (${CMAKE_PCAP_LIBS_INIT})")
-		endif()
-	endif()
-	
-	set(CMAKE_UNWIND_LIBS_INIT)
-
-	if(NOT ${CMAKE_SYSTEM_PROCESSOR} MATCHES "^mips" AND NOT ${CMAKE_SYSTEM_NAME} MATCHES "SunOS")
-		find_library(CMAKE_UNWIND_LIBS_INIT
-		NAME unwind
-		PATHS
-			${CROSS_COMPILE_LIBS}
-			/usr/lib
-			/usr/lib32
-			/usr/lib64
-			/usr/lib/i386-linux-gnu		
-			/usr/lib/x86_64-linux-gnu
-			/usr/local/lib
-			/usr/local/lib32
-			/usr/local/lib64
-			/usr/lib/arm-linux-gnueabi
-			/usr/lib/arm-linux-gnueabihf
-		NO_DEFAULT_PATH)
-
-		if(${CMAKE_UNWIND_LIBS_INIT} MATCHES "CMAKE_UNWIND_LIBS_INIT-NOTFOUND")
-			message(FATAL_ERROR "Looking for libunwind - not found")
-		else()
-			message(STATUS "Looking for libunwind - found (${CMAKE_UNWIND_LIBS_INIT})")
 		endif()
 	endif()
 
@@ -301,7 +279,9 @@ include_directories(/usr/local/include/)
 
 add_subdirectory(inc)
 add_subdirectory(libs)
-add_subdirectory(tests)
+if(${PILIGHT_UNITTEST})
+	add_subdirectory(tests)
+endif()
 
 if(WIN32)
 	set(THREADS_USE_PTHREADS_WIN32 true)
@@ -335,17 +315,28 @@ if(${MODULESPACK} MATCHES "OFF" OR WIN32)
 	add_library(${PROJECT_NAME} OBJECT ${libs_files})
 	set_property(TARGET ${PROJECT_NAME} PROPERTY POSITION_INDEPENDENT_CODE TRUE)
 	set_property(TARGET ${PROJECT_NAME} PROPERTY C_STANDARD 99)
-	add_library(DSO OBJECT ${PROJECT_SOURCE_DIR}/tests/libdso.c)
-	set_property(TARGET DSO PROPERTY POSITION_INDEPENDENT_CODE TRUE)
-	set_property(TARGET DSO PROPERTY C_STANDARD 99)
+
+	if(${PILIGHT_UNITTEST})
+		add_library(DSO OBJECT ${PROJECT_SOURCE_DIR}/tests/libdso.c)
+		add_library(GPIO OBJECT ${PROJECT_SOURCE_DIR}/tests/libgpio.c)
+		set_property(TARGET DSO PROPERTY POSITION_INDEPENDENT_CODE TRUE)
+		set_property(TARGET DSO PROPERTY C_STANDARD 99)
+		set_property(TARGET GPIO PROPERTY POSITION_INDEPENDENT_CODE TRUE)
+		set_property(TARGET GPIO PROPERTY C_STANDARD 99)
+	endif()
 
 	add_library(${PROJECT_NAME}_static STATIC $<TARGET_OBJECTS:${PROJECT_NAME}>)
 	add_library(${PROJECT_NAME}_shared SHARED $<TARGET_OBJECTS:${PROJECT_NAME}>)
-	add_library(dso_shared SHARED $<TARGET_OBJECTS:DSO>)
+
+	if(${PILIGHT_UNITTEST})
+		add_library(dso_shared SHARED $<TARGET_OBJECTS:DSO>)
+		add_library(gpio_shared SHARED $<TARGET_OBJECTS:GPIO>)
+		set_property(TARGET dso_shared PROPERTY C_STANDARD 99)
+		set_property(TARGET gpio_shared PROPERTY C_STANDARD 99)
+	endif()
 
 	set_property(TARGET ${PROJECT_NAME}_static PROPERTY C_STANDARD 99)
 	set_property(TARGET ${PROJECT_NAME}_shared PROPERTY C_STANDARD 99)
-	set_property(TARGET dso_shared PROPERTY C_STANDARD 99)
 
 	if(CMAKE_BUILD_TYPE MATCHES DEBUG AND ${CMAKE_SYSTEM_PROCESSOR} MATCHES "^mips")
 		target_link_libraries(${PROJECT_NAME}_shared pthread)
@@ -426,8 +417,6 @@ if(${MODULESPACK} MATCHES "OFF" OR WIN32)
 	endif()
 		
 	if(NOT WIN32)
-		target_link_libraries(${PROJECT_NAME}_shared ${CMAKE_UNWIND_LIBS_INIT})
-		target_link_libraries(${PROJECT_NAME}_static ${CMAKE_UNWIND_LIBS_INIT})
 		if(CMAKE_BUILD_TYPE MATCHES DEBUG AND NOT ${CMAKE_SYSTEM_PROCESSOR} MATCHES "^mips" AND NOT ${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
 			# target_link_libraries(${PROJECT_NAME}_shared asan)
 			# target_link_libraries(${PROJECT_NAME}_shared ubsan)
@@ -437,7 +426,11 @@ if(${MODULESPACK} MATCHES "OFF" OR WIN32)
 	endif()
 
 	set_target_properties(${PROJECT_NAME}_shared ${PROJECT_NAME}_static PROPERTIES OUTPUT_NAME ${PROJECT_NAME})
-	set_target_properties(dso_shared PROPERTIES OUTPUT_NAME dso)
+
+	if(${PILIGHT_UNITTEST})
+		set_target_properties(dso_shared PROPERTIES OUTPUT_NAME dso)
+		set_target_properties(gpio_shared PROPERTIES OUTPUT_NAME gpio)
+	endif()
 
 	if(NOT WIN32)
 		install(CODE "execute_process(COMMAND rm /usr/local/lib/lib${PROJECT_NAME}.so)")
@@ -482,32 +475,34 @@ if(${MODULESPACK} MATCHES "OFF" OR WIN32)
 		endif()
 	endif()	
 
-	if(WIN32)
-		add_executable(${PROJECT_ROOT_NAME}-unittest tests/alltests.c ${tests_files} ${PROJECT_SOURCE_DIR}/res/win32/icon.obj )
-	else()
-		add_executable(${PROJECT_ROOT_NAME}-unittest tests/alltests.c ${tests_files})
+	if(${PILIGHT_UNITTEST})
+		if(WIN32)
+			add_executable(${PROJECT_ROOT_NAME}-unittest tests/alltests.c ${tests_files} ${PROJECT_SOURCE_DIR}/res/win32/icon.obj )
+		else()
+			add_executable(${PROJECT_ROOT_NAME}-unittest tests/alltests.c ${tests_files})
+		endif()
+
+		target_link_libraries(${PROJECT_ROOT_NAME}-unittest ${PROJECT_ROOT_NAME}_shared)
+		if(${ZWAVE} MATCHES "ON")
+			target_link_libraries(${PROJECT_ROOT_NAME}-unittest stdc++)
+		endif()
+		target_link_libraries(${PROJECT_ROOT_NAME}-unittest ${CMAKE_DL_LIBS})
+		if(NOT WIN32)
+			target_link_libraries(${PROJECT_ROOT_NAME}-unittest m)
+		endif()
+		if(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
+			target_link_libraries(${PROJECT_ROOT_NAME}-unittest ${Backtrace_LIBRARIES})
+		endif()
+		if(CMAKE_BUILD_TYPE MATCHES DEBUG AND ${CMAKE_SYSTEM_PROCESSOR} MATCHES "^mips")
+			target_link_libraries(${PROJECT_ROOT_NAME}-unittest pthread)
+		else()
+			target_link_libraries(${PROJECT_ROOT_NAME}-unittest ${CMAKE_THREAD_LIBS_INIT})
+		endif()
+		set_target_properties(${PROJECT_ROOT_NAME}-unittest PROPERTIES INSTALL_RPATH "${CMAKE_BINARY_DIR}/")
+		set_target_properties(${PROJECT_ROOT_NAME}-unittest PROPERTIES BUILD_WITH_INSTALL_RPATH TRUE)
+		set_target_properties(${PROJECT_ROOT_NAME}-unittest PROPERTIES INSTALL_RPATH_USE_LINK_PATH TRUE)
 	endif()
 
-	target_link_libraries(${PROJECT_ROOT_NAME}-unittest ${PROJECT_ROOT_NAME}_shared)
-	if(${ZWAVE} MATCHES "ON")
-		target_link_libraries(${PROJECT_ROOT_NAME}-unittest stdc++)
-	endif()
-	target_link_libraries(${PROJECT_ROOT_NAME}-unittest ${CMAKE_DL_LIBS})
-	if(NOT WIN32)
-		target_link_libraries(${PROJECT_ROOT_NAME}-unittest m)
-	endif()
-	if(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
-		target_link_libraries(${PROJECT_ROOT_NAME}-unittest ${Backtrace_LIBRARIES})
-	endif()
-	if(CMAKE_BUILD_TYPE MATCHES DEBUG AND ${CMAKE_SYSTEM_PROCESSOR} MATCHES "^mips")
-		target_link_libraries(${PROJECT_ROOT_NAME}-unittest pthread)
-	else()
-		target_link_libraries(${PROJECT_ROOT_NAME}-unittest ${CMAKE_THREAD_LIBS_INIT})
-	endif()
-	set_target_properties(${PROJECT_ROOT_NAME}-unittest PROPERTIES INSTALL_RPATH "${CMAKE_BINARY_DIR}/")
-	set_target_properties(${PROJECT_ROOT_NAME}-unittest PROPERTIES BUILD_WITH_INSTALL_RPATH TRUE)
-	set_target_properties(${PROJECT_ROOT_NAME}-unittest PROPERTIES INSTALL_RPATH_USE_LINK_PATH TRUE)	
-	
 	if(WIN32)
 		add_executable(${PROJECT_NAME}-daemon daemon.c ${PROJECT_SOURCE_DIR}/res/win32/icon.obj)
 		target_link_libraries(${PROJECT_NAME}-daemon "-Wl,--subsystem,windows")
