--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -15,4 +15,8 @@ endif()
 list(REMOVE_ITEM ${PROJECT_NAME}_sources "${PROJECT_SOURCE_DIR}/libgpio.c")
 list(REMOVE_ITEM ${PROJECT_NAME}_sources "${PROJECT_SOURCE_DIR}/libdso.c")
 
+if(${WEBSERVER} MATCHES "OFF")
+	list(REMOVE_ITEM ${PROJECT_NAME}_sources "${PROJECT_SOURCE_DIR}/webserver.c")
+endif()
+
 set(${PROJECT_NAME}_files ${${PROJECT_NAME}_sources} ${${PROJECT_NAME}_headers} CACHE INTERNAL "")
