--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,8 @@ addons:
       - libpcap-dev
       - libunwind8-dev
       - lcov
+      - liblua5.2-0
+      - liblua5.2-dev
 
 install:
   - curl https://apt.pilight.org/pilight.key | sudo apt-key add - && echo "deb http://apt.pilight.org/ stable main" | sudo tee -a /etc/apt/sources.list
