--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -474,9 +474,9 @@ if(${MODULESPACK} MATCHES "OFF" OR WIN32)
 
 	if(NOT WIN32)
 		install(CODE "execute_process(COMMAND rm /usr/local/lib/lib${PROJECT_NAME}.so)")
-		install(FILES ${CMAKE_BINARY_DIR}/lib${PROJECT_NAME}.so DESTINATION lib/${PROJECT_NAME}/ RENAME lib${PROJECT_NAME}.so.${VERSION} COMPONENT ${PROJECT_NAME})
-		install(FILES ${CMAKE_BINARY_DIR}/lib${PROJECT_NAME}.a DESTINATION lib/${PROJECT_NAME}/ RENAME lib${PROJECT_NAME}.a COMPONENT ${PROJECT_NAME})
-		install(CODE "execute_process(COMMAND ln -s \"/usr/local/lib/${PROJECT_NAME}/lib${PROJECT_NAME}.so.${VERSION}\" \"/usr/local/lib/lib${PROJECT_NAME}.so\")")	
+		install(FILES ${CMAKE_BINARY_DIR}/lib${PROJECT_NAME}.so DESTINATION lib RENAME lib${PROJECT_NAME}.so.${VERSION} COMPONENT ${PROJECT_NAME})
+		install(FILES ${CMAKE_BINARY_DIR}/lib${PROJECT_NAME}.a DESTINATION lib RENAME lib${PROJECT_NAME}.a COMPONENT ${PROJECT_NAME})
+		install(CODE "execute_process(COMMAND ln -s \"/usr/local/lib/lib${PROJECT_NAME}.so.${VERSION}\" \"/usr/local/lib/lib${PROJECT_NAME}.so\")")
 
 		if(EXISTS "/usr/local/lib/${PROJECT_NAME}/protocols")
 			install(CODE "execute_process(COMMAND find /usr/local/lib/${PROJECT_NAME}/protocols/ -type f -exec rm {} \\;)")
@@ -489,6 +489,9 @@ if(${MODULESPACK} MATCHES "OFF" OR WIN32)
 		endif()
 		if(EXISTS "/usr/local/lib/${PROJECT_NAME}/operators")
 			install(CODE "execute_process(COMMAND find /usr/local/lib/${PROJECT_NAME}/operators/ -type f -exec rm {} \\;)")
+		endif()
+		if(EXISTS "/usr/local/${PROJECT_NAME}/operators")
+			install(CODE "execute_process(COMMAND find /usr/local/${PROJECT_NAME}/operators/ -type f -exec rm {} \\;)")
 		endif()
 
 		if(EXISTS "/etc/${PROJECT_NAME}/config.json")
@@ -511,7 +514,7 @@ if(${MODULESPACK} MATCHES "OFF" OR WIN32)
 		if(WIN32)
 			install(DIRECTORY ${PROJECT_SOURCE_DIR}/libs/webgui/ DESTINATION web/ COMPONENT webgui)
 		else()
-			install(DIRECTORY ${PROJECT_SOURCE_DIR}/libs/webgui/ DESTINATION /usr/local/share/${PROJECT_NAME} COMPONENT webgui)
+			install(DIRECTORY ${PROJECT_SOURCE_DIR}/libs/webgui/ DESTINATION /usr/local/${PROJECT_NAME}/webgui COMPONENT webgui)
 		endif()
 	endif()	
 
