Package init script for all init systems

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -311,7 +311,9 @@ if(${MODULESPACK} MATCHES "OFF" OR WIN32)
 			install(CODE "execute_process(COMMAND mv /etc/${PROJECT_NAME}/config.json /etc/${PROJECT_NAME}/config.json.bak)")
 		endif()
 
-		install(PROGRAMS ${PROJECT_SOURCE_DIR}/res/init/${PROJECT_NAME}.initd DESTINATION /etc/init.d/ RENAME ${PROJECT_NAME})
+		install(PROGRAMS ${PROJECT_SOURCE_DIR}/res/init/${PROJECT_NAME}.sysv DESTINATION /etc/init.d/ RENAME ${PROJECT_NAME})
+		install(PROGRAMS ${PROJECT_SOURCE_DIR}/res/init/${PROJECT_NAME}.systemd DESTINATION etc/systemd/system/ RENAME ${PROJECT_NAME}.service)
+		install(PROGRAMS ${PROJECT_SOURCE_DIR}/res/init/${PROJECT_NAME}.upstart DESTINATION /etc/init/ RENAME ${PROJECT_NAME}.conf)
 		install(FILES ${PROJECT_SOURCE_DIR}/res/config/config.json-default DESTINATION /etc/${PROJECT_NAME}/ RENAME config.json COMPONENT ${PROJECT_NAME})
 	else()
 		install(FILES ${CMAKE_BINARY_DIR}/lib${PROJECT_NAME}.dll DESTINATION . RENAME lib${PROJECT_NAME}.dll COMPONENT ${PROJECT_NAME})
