Proper installation path or event operator modules

--- a/libs/pilight/events/functions/CMakeLists.txt
+++ b/libs/pilight/events/functions/CMakeLists.txt
@@ -2,5 +2,5 @@ file(GLOB functions "${PROJECT_SOURCE_DIR}/functions/*.lua")
 if(WIN32)
 	install(FILES ${functions} DESTINATION functions/ COMPONENT ${PROJECT_NAME})
 else()
-	install(FILES ${functions} DESTINATION ${PROJECT_NAME}/functions/ COMPONENT ${PROJECT_NAME})
+	install(FILES ${functions} DESTINATION pilight/functions/ COMPONENT ${PROJECT_NAME})
 endif()
