--- a/libs/pilight/events/functions/CMakeLists.txt
+++ b/libs/pilight/events/functions/CMakeLists.txt
@@ -8,17 +8,5 @@ if(${MODULESPACK} MATCHES "OFF" OR WIN32)
 
 	set(${PROJECT_NAME}_files ${${PROJECT_NAME}_sources} ${${PROJECT_NAME}_headers} CACHE INTERNAL "")
 else()
-	foreach(file ${${PROJECT_NAME}_sources})
-		get_filename_component(name ${file} NAME_WE)
-		add_library(${name}_module MODULE ${file})
-		target_link_libraries(${name}_module ${CMAKE_THREAD_LIBS_INIT})
-		target_link_libraries(${name}_module m)
-		if(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
-			target_link_libraries(${name}_module execinfo)
-		endif()
-		target_link_libraries(${name}_module ${CMAKE_DL_LIBS})
-		set_target_properties(${name}_module PROPERTIES OUTPUT_NAME ${name})
-		string(REPLACE "_" "-" debname ${name})
-		install(FILES ${CMAKE_BINARY_DIR}/libs/pilight/events/functions/lib${name}.so DESTINATION lib/pilight/functions RENAME ${name}.so COMPONENT pilight-function-${debname})
-	endforeach()
+	install(FILES ${functions} DESTINATION pilight/functions/ COMPONENT ${PROJECT_NAME})
 endif()
