Proper installation path or event operator modules

--- a/libs/pilight/events/operators/CMakeLists.txt
+++ b/libs/pilight/events/operators/CMakeLists.txt
@@ -2,5 +2,5 @@ file(GLOB operators "${PROJECT_SOURCE_DIR}/operators/*.lua")
 if(WIN32)
 	install(FILES ${operators} DESTINATION operators/ COMPONENT ${PROJECT_NAME})
 else()
-	install(FILES ${operators} DESTINATION ${PROJECT_NAME}/operators/ COMPONENT ${PROJECT_NAME})
+	install(FILES ${operators} DESTINATION pilight/operators/ COMPONENT ${PROJECT_NAME})
 endif()
