Improve luajit include path

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -298,26 +298,13 @@ PATHS
 NO_DEFAULT_PATH)
 
 if(${CMAKE_LUA_LIBS_INIT} MATCHES "CMAKE_LUA_LIBS_INIT-NOTFOUND")
-	message(FATAL_ERROR "Looking for liblua - not found")
+	message(FATAL_ERROR "Looking for libluajit - not found")
 else()
-	if(${CMAKE_LUA_LIBS_INIT} MATCHES ".*5.1.*")
-		set(CMAKE_LUA_LIBS_VERSION "5.1")
-	elseif(${CMAKE_LUA_LIBS_INIT} MATCHES ".*5.2.*")
-		set(CMAKE_LUA_LIBS_VERSION "5.2")
-	elseif(${CMAKE_LUA_LIBS_INIT} MATCHES ".*5.3.*")
-		set(CMAKE_LUA_LIBS_VERSION "5.3")
-	elseif(${CMAKE_LUA_LIBS_INIT} MATCHES ".*5.*")
-		set(CMAKE_LUA_LIBS_VERSION "5")
-	endif()
-	find_path(CMAKE_LUA_INCLUDE_DIR "lua${CMAKE_LUA_LIBS_VERSION}/lua.h")
-	message(STATUS "Looking for liblua - found (${CMAKE_LUA_LIBS_INIT})")
+	message(STATUS "Looking for libluajit - found (${CMAKE_LUA_LIBS_INIT})")
 endif()
 
 include_directories(${PROJECT_SOURCE_DIR}/inc)
 include_directories(${PROJECT_SOURCE_DIR}/libs/libuv)
-include_directories(/usr/local/include/)
-include_directories(/usr/include/luajit-2.0)
-include_directories("${CMAKE_LUA_INCLUDE_DIR}/lua${CMAKE_LUA_LIBS_VERSION}/")
 
 add_subdirectory(inc)
 add_subdirectory(libs)
