Some adjustments for new event parser

--- a/libs/pilight/events/functions/CMakeLists.txt
+++ b/libs/pilight/events/functions/CMakeLists.txt
@@ -1,12 +1,6 @@
-project(pilight_event_functions)
-
-file(GLOB ${PROJECT_NAME}_sources "${PROJECT_SOURCE_DIR}/*.c")
-file(GLOB ${PROJECT_NAME}_headers "${PROJECT_SOURCE_DIR}/*.h")
-
-if(${MODULESPACK} MATCHES "OFF" OR WIN32)
-	include(CMakeInclude.txt)
-
-	set(${PROJECT_NAME}_files ${${PROJECT_NAME}_sources} ${${PROJECT_NAME}_headers} CACHE INTERNAL "")
+file(GLOB functions "${PROJECT_SOURCE_DIR}/functions/*.lua")
+if(WIN32)
+	install(FILES ${functions} DESTINATION functions/ COMPONENT ${PROJECT_NAME})
 else()
 	install(FILES ${functions} DESTINATION pilight/functions/ COMPONENT ${PROJECT_NAME})
 endif()
