--- a/libs/pilight/events/functions/CMakeLists.txt
+++ b/libs/pilight/events/functions/CMakeLists.txt
@@ -1,6 +1,6 @@
 file(GLOB functions "${PROJECT_SOURCE_DIR}/functions/*.lua")
 if(WIN32)
-	install(FILES ${functions} DESTINATION functions/ COMPONENT ${PROJECT_NAME})
+	install(FILES ${functions} DESTINATION functions/ COMPONENT pilight)
 else()
-	install(FILES ${functions} DESTINATION lib/pilight/functions/ COMPONENT ${PROJECT_NAME})
+	install(FILES ${functions} DESTINATION lib/pilight/functions/ COMPONENT pilight)
 endif()
